--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     },
     "require-dev": {
         "symfony/debug-pack": "^1.0",
+        "symfony/maker-bundle": "^1.18",
         "symfony/phpunit-bridge": "^5.0"
     },
     "config": {
